# autonomous-os

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS  Makefile  NOTICE  README.md  SECURITY.md
dlbackend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.slave.yml  docker-compose.yml  nginx-ssl.conf  nginx.conf  pyproject.toml
dlbackend/docs/: README.md  api.md  architecture.md  configuration.md  crypto-and-loadbalancer.md  deployment.md  known-issues.md  perceptions.md
dlbackend/scripts/: docker-entrypoint.sh  run-with-restart.sh
dlbackend/src/: config.py  factory.py
dlbackend/src/core/enums/: files.py  object.py
dlbackend/src/core/export/entries/: export_all.py  export_emonet.py  export_emotion2vec.py  export_grounding_dino.py  (+7 more)
dlbackend/src/core/utils/: common.py  detection.py  files.py  runtime.py
dlbackend/src/dlserver/: app.py
dlbackend/src/dlserver/models/: audio.py  object.py
dlbackend/src/dlserver/routes/: action.py  audio.py  audio_emotion.py  facial_emotion.py  object.py  pose.py
dlbackend/src/dlserver/utils/: audio.py  common.py
dlbackend/src/lbserver/: app.py
dlbackend/tests/action_api/: test_action_analysis_ws_api.py
dlbackend/tests/action_local/: settings.py  test_person_detector_local.py  test_uniformerv2_ws_local.py  test_x3d_ws_local.py
dlbackend/tests/audio_api/: test_audio_embedder_api.py
dlbackend/tests/audio_emotion_api/: test_audio_emotion_api.py
dlbackend/tests/audio_emotion_local/: test_audio_emotion_local.py
dlbackend/tests/audio_local/: test_audio_embedder_local.py
dlbackend/tests/benchmark_api/: test_benchmark_api.py  test_benchmark_mixed.py  test_benchmark_ws.py
dlbackend/tests/consistency/: test_object_detection_consistency.py
dlbackend/tests/crypto_api/: test_crypto_api.py
dlbackend/tests/emotion_api/: test_emotion_ws_api.py
dlbackend/tests/emotion_local/: test_emotion_ws_local.py  test_posterv2_ws_local.py
dlbackend/tests/lb_local/: test_lb_crypto.py  test_lb_proxy.py
dlbackend/tests/object_api/: test_object_detection_api.py
dlbackend/tests/object_local/: test_object_detection_local.py
dlbackend/tests/pose_api/: test_pose_estimation_api.py
dlbackend/tests/pose_local/: test_ergo_ws_local.py  test_rtmpose_tcpformer_local.py  test_rtmpose_ws_local.py
(+941 files in other folders)
