[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplearning-backend"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic",
    "pydantic-settings",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dl = [
    "ultralytics>=8.3.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=2",
    "tqdm",
    "scikit-learn",
    "pandas",
    "opencv-contrib-python",
    "websockets",
    "soundfile",
    "sounddevice",
    "scipy>=1.8",
    "kaldi-native-fbank>=1.0.0",
    "noisereduce",
    "silero-vad",
    "funasr==1.3.1",
    "onnx==1.21.0"
]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
tensorrt = [
    "onnxruntime-gpu",
    "tensorrt_cu12==10.8.*",
    "tensorrt_cu12_bindings==10.8.*",
    "tensorrt_cu12_libs==10.8.*",
    "nvidia-cudnn-cu12",
]
lb = [
    "httpx",
    "websockets",
]
dev = [
    "ruff",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "httpx",
    "websockets",
]

[project.scripts]
export-all = "core.export.entries.export_all:entry"
export-emonet = "core.export.entries.export_emonet:entry"
export-emotion2vec = "core.export.entries.export_emotion2vec:entry"
export-owlv2 = "core.export.entries.export_owlv2:entry"
export-posterv2 = "core.export.entries.export_posterv2:entry"
export-tcpformer = "core.export.entries.export_tcpformer:entry"
export-uniformerv2 = "core.export.entries.export_uniformerv2:entry"
export-yolo = "core.export.entries.export_yolo:entry"
export-yolo-world = "core.export.entries.export_yolo_world:entry"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["integration: integration tests that require real model/audio files"]
filterwarnings = [
    "ignore:Failed to initialize NumPy.*_ARRAY_API not found:UserWarning",
    "ignore:model_path is None, switching to default local model path at:UserWarning",
]

[tool.ruff]
line-length = 100
